--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,13 @@ lazy_static = "1.4.0"
 log = "0.4.0"
 prometheus = "0.13.3"
 prost = "0.12.1"
-rdkafka = { version = "0.33.0", features = ["ssl", "sasl"] }
+rdkafka = { version = "0.33.0", features = ["ssl", "sasl", "dynamic-linking"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.81"
-solana-geyser-plugin-interface = "1.18.26"
-solana-logger = "1.18.26"
-solana-program = "1.18.26"
-solana-transaction-status = "1.18.26"
+solana-geyser-plugin-interface = "=1.18.25"
+solana-logger = "=1.18.25"
+solana-program = "=1.18.25"
+solana-transaction-status = "=1.18.25"
 tokio = { version = "1.32.0", features = [
 	"rt-multi-thread",
 	"time",
